k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: 8byte-devops-service
  namespace: dev

spec:
  selector:
    app: 8byte-devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
